--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@react-spring/web": "^9.7.4",
     "@supabase/supabase-js": "^2.44.4",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
@@ -19,6 +20,7 @@
     "querystring": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-tinder-card": "^1.6.4",
     "request": "^2.88.2"
   },
   "devDependencies": {
